[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Animations/Fade.tres" type="Animation" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 510, 291 )
texture = ExtResource( 2 )

[node name="AnimSpr" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="AnimPlr" type="AnimationPlayer" parent="."]

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/Fade = ExtResource( 3 )
anims/RESET = SubResource( 3 )

[node name="ExibirAnim" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ExibirAnim" to="." method="_on_ExibirAnim_timeout"]
